hard-gists/4b984557676d2d6c92a6/run.log
=== Docker Run Log for 4b984557676d2d6c92a6 ===
Started at: Mi 29. Okt 15:07:48 CET 2025

[2025-10-29 15:07:49] START: Running container for 4b984557676d2d6c92a6
[2025-10-29 15:07:49] SUCCESS: Container 6547aa0489bd34b758a63ae029eb512e085453f78745bb19117fa303812487b0 started for 4b984557676d2d6c92a6
=== Container logs for 4b984557676d2d6c92a6 ===
  File "/snippet.py", line 71
    print ' >> {0}'.format(stringc(msg, 'cyan'))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4b984557676d2d6c92a6 ===
[2025-10-29 15:07:51] INFO: Container 6547aa0489bd34b758a63ae029eb512e085453f78745bb19117fa303812487b0 has stopped
